--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,56 @@
     flex-direction: column;
     padding-bottom: 50px;
 }
+.slidecontainer {
+    width: 100%; /* Width of the outside container */
+    padding-top: 10px;
+  }
+  
+  /* The slider itself */
+  .slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%; /* Full-width */
+    height: 25px; /* Specified height */
+    background: #d3d3d3; /* Grey background */
+    outline: none; /* Remove outline */
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+  }
+  
+  /* Mouse-over effects */
+  .slider:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+  }
+  
+  /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    background: rgb(255, 88, 35); /* Green background */
+    cursor: pointer; /* Cursor on hover */
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    background:rgb(255, 88, 35); /* Green background */
+    cursor: pointer; /* Cursor on hover */
+  }
+
+  #location-butt{
+    -webkit-appearance: none; /* Override default look */
+    text-emphasis-color: black;
+    background-color:rgb(255, 88, 35);
+    text-decoration-color: black;
+    color: black;
+    border-color: rgb(255, 88, 35);
+    opacity: .7;
+  }
+
+  #location-butt:hover{
+      opacity: 1;
+  }
